test/suites/fail-lower/L-019d.expected
  × One or more errors occured.

Error: L-001

  × Undefined identifier Fun
   ╭─[L-019d.pol:1:17]
 1 │ infix _ -> _ := Fun(_,_)
   ·                 ───
   ╰────
