test/suites/fail-lower/L-019d.pol
infix _ -> _ := Fun(_,_)